feat: introduce multi-team membership via UsuarioTime
Usuario deixa de pertencer a exatamente um Time (FK rigido +
perfil no proprio usuario) e passa a ter uma identidade
independente, ligada a times atraves de UsuarioTime (novo
vinculo com perfil por-time). Isso permite uma pessoa
administrar um time e jogar como atleta em outro.

- Nova entidade/repositorio/service UsuarioTime + endpoints
  em /api/time/{id}/membros (adicionar por e-mail reaproveitando
  identidade existente, listar, trocar perfil, remover/reativar)
- AuthenticatedUserProvider: validarAcessoAoTime vira validarMembro
  (existe vinculo ativo?) + novo validarAdminDoTime
- @PreAuthorize("hasRole('ADMIN')") sai dos controllers, vira
  checagem explicita por time dentro dos services
- LoginResponse retorna a lista de times da pessoa (base pro
  seletor de time no login quando ha mais de um vinculo)
- UsuarioService fica só com identidade (nome/email/senha),
  self-only em update
- Migration V13 cria usuario_time e faz backfill de 1 vinculo
  por usuario existente, preservando time/perfil atuais

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_0153KF4q1rC8VEtvDfjy36Hq